# flash-sale

./: .gitignore  AGENT_AND_SKILL_RECOMMENDATIONS.md  AI_CHAT_ASSISTANT_IMPLEMENTATION_PLAN.md  AI_FEATURE_PROPOSALS.md  BACKEND_TOOLS_AND_TECHNOLOGIES.md  CLAUDE.md  DEBUGGING_GUIDE.md  DOCKER_SETUP_GUIDE.md  LOCAL_SETUP_GUIDE.md  NON_PYTHON_DEVELOPER_GUIDE.md  ONBOARDING.md  REDIS_RABBITMQ_CELERY_FLOWER_GUIDE.md  REDIS_RABBITMQ_CELERY_FLOWER_SUMMARY.md  TECHNICAL_DOCUMENTATION.md  aa.md  bb.md  test_api.sh  test_payment_flow.sh
backend/: .env.example  Dockerfile  Makefile  README.md  alembic.ini  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  pyproject.toml
backend/seatflow/: __init__.py  __main__.py  config.py  log.py  seed.py
backend/seatflow/core/: cache.py  exceptions.py  lock.py  rate_limiter.py  security.py
backend/seatflow/core/logging/: __init__.py  service_logger.py
backend/seatflow/core/middleware/: exception_handler.py  logging_middleware.py
backend/seatflow/db/: base.py  dependencies.py  utils.py
backend/seatflow/db/dao/: booking.py  chat_message.py  chat_session.py  event.py  knowledge.py  payment.py  ticket.py  user.py
backend/seatflow/db/migrations/: env.py
backend/seatflow/db/models/: __init__.py  booking.py  chat.py  event.py  payment.py  ticket.py  user.py
backend/seatflow/events/: __init__.py  consumer.py  handlers.py  models.py  publisher.py  rabbitmq_publisher.py
backend/seatflow/payment/: __init__.py  base.py  mock_gateway.py  stripe_provider.py
backend/seatflow/scripts/: seed_knowledge.py
backend/seatflow/services/admin/: __init__.py  service.py
backend/seatflow/services/auth/: __init__.py  service.py
backend/seatflow/services/booking/: __init__.py  service.py
backend/seatflow/services/chat/: __init__.py  chat_service.py  context_retriever.py  llm_provider.py  prompt_builder.py
backend/seatflow/services/event/: __init__.py  service.py
backend/seatflow/services/payment/: __init__.py  (+1 more)
backend/seatflow/tasks/: __init__.py  celery_app.py  chat_tasks.py  tasks.py
backend/seatflow/web/: application.py  lifespan.py
backend/tests/: conftest.py
(+132 files in other folders)
